# AppPanell

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: release.yml
top-launcher/: package-lock.json  package.json
top-launcher/src/: index.html  main.rs
top-launcher/src-tauri/: Cargo.toml  tauri.conf.json
top-launcher/src-tauri/capabilities/: default.json
top-launcher/src-tauri/icons/: icon.icns
top-launcher/src-tauri/src/: lib.rs  main.rs
