[package]
name = "top-launcher"
version = "1.2.39"
description = "App Panel Launcher"
authors = ["Atoryxic Labs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "top_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.3.1"
base64 = "0.22.1"
image = "0.25"
tokio = { version = "1", features = ["time"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2.3.5"
winapi = { version = "0.3.9", features = ["shellapi", "winuser", "wingdi", "errhandlingapi"] }
window-vibrancy = "0.7.1"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell",  "Win32_Storage_FileSystem",] }

